--- a/todo.txt
+++ b/todo.txt
@@ -8,9 +8,8 @@ Sistema de Roles y Permisos:
         Implementa diferentes niveles de acceso (administradores, usuarios premium, usuarios vip, usuarios normales, usuarios no registrados) -> (primera idea) 
         con permisos específicos para cada rol.
 
-Favoritos y Listas Personalizadas: 
-        Permite a los usuarios guardar itinerarios, destinos 
-        o actividades en una lista de favoritos para acceder a ellos fácilmente en el futuro.
+Personalizadas: 
+       Permite que los usuarios puedan hacer listas personalizadas de los intinerarios que le hayan gustado ("viajes de negocios", "viajas de lujo"...).
 
 Integración de Pagos: 
         Si planeas ofrecer servicios premium, podrías integrar un sistema de pagos seguro para suscripciones 
@@ -19,3 +18,5 @@ Integración de Pagos:
 Soporte Multilingüe: 
         Amplía el alcance de tu aplicación permitiendo que sea utilizada en varios idiomas, 
         atrayendo a una audiencia más global.
+
+Comprobación de que el usuario ha hecho el intinerario (con fotos o videos o alguna otra idea)
