--- a/todo.txt
+++ b/todo.txt
@@ -4,9 +4,30 @@ Integración con APIs Externas:
 
         (s'ha integrat mas o menos, he utilitzat s'api de amadeus per conseguir hotels i recomenarlos depenguent de sa ciutat que se recomana)
 
-Sistema de Roles y Permisos: 
-        Implementa diferentes niveles de acceso (administradores, usuarios premium, usuarios vip, usuarios normales, usuarios no registrados) -> (primera idea) 
-        con permisos específicos para cada rol.
+Administración y moderación:
+        Falta agregar más endpoints.
+
+Sistema de reseñas y calificaciones:
+        Falta agregar más endpoints.
+
+Comentarios en itinerarios:
+        Falta agregar más endpoints.    
+        
+Colaboración en itinerarios:
+        Permite que múltiples usuarios puedan colaborar en la creación 
+        y edición de un itinerario, ideal para viajes en grupo.         
+
+Sugerencias personalizadas:
+        Implementa un motor de recomendaciones que sugiera destinos, 
+        actividades o itinerarios basados en las preferencias y el historial de viajes del usuario.
+
+Gestión de documentos de viaje:
+        Permite a los usuarios almacenar de forma segura 
+        copias digitales de sus pasaportes, visados, tarjetas de embarque, etc.
+
+Modo offline:
+        Proporciona la opción de descargar los itinerarios 
+        para acceder a ellos sin conexión a internet durante el viaje.
 
 Integración de Pagos: 
         Si planeas ofrecer servicios premium, podrías integrar un sistema de pagos seguro para suscripciones 
